--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<li><a href="Home.html">Home</a></li>
 					<li><a href="About.html">About Me</a></li>
 					<li><a href="Projects.html">Projects</a></li>
-					<li><a href="Contact.html">Contact</a></li>
+					<li><a href="Contact.html">Contacts</a></li>
 				</ul>
 			</nav>
 			
