--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<nav>
 				<ul>
 					<li><a href="Home.html">Home</a></li>
-					<li><a href="About.html">About Me</a></li>
+					<li><a href="About.html">About</a></li>
 					<li><a href="Projects.html">Projects</a></li>
 					<li><a href="Contact.html">Contacts</a></li>
 				</ul>
