--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<header>
 		<div class="container">
 			<div id="profile">
-				<img src="profile.jpg">
+				<img src="t5.jpg" style="height: 100px;width: 60px">
 				<h1>Lets go Digital.Flip with me...</h1>
 			</div>
 			<nav>
