Add inline elements

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<div class="container">
 			<div id="profile">
 				<img src="t5.jpg" style="height: 100px;width: 60px">
-				<h1>Lets go Digital.Flip with me...</h1>
+				<h1>Peter Gichia</h1>
+
+				<h2>Lets go <span>Digital</span>with me...</h2>
 			</div>
 			<nav>
 				<ul>
