Add google fonts

--- a/index.html
+++ b/index.html
@@ -3,17 +3,31 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="index.css">
+	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico&display=swap" rel="stylesheet"> 
 	<title>Professional Portfolio</title>
 </head>
 <body>
 	<header>
 		<div class="container">
 			<div id="profile">
-				<img src="t5.jpg" style="height: 100px;width: 60px">
+				<img src="cloud.jpg" style="height: 150px;width: 200px">
 				<h1>Peter Gichia</h1>
 
-				<h2>Lets go <span>Digital</span>with me...</h2>
+				<h2>Lets dive into my <span>Digital</span> space</h2>
+
 			</div>
+		</div>
+	</header>
+
+	<section>
+		<div class="description">
+			<p>
+				This site gives a detailed information about Peter Gichia's vast experience in web development offering entailed links to some of his past projects he has participated in.
+				Feel free to navigate through the pages and dive into my awesome career.
+			</p>
+		</div>
+	</section>
+	<div>
 			<nav>
 				<ul>
 					<li><a href="Home.html">Home</a></li>
@@ -22,9 +36,6 @@
 					<li><a href="Contact.html">Contacts</a></li>
 				</ul>
 			</nav>
-			
 		</div>
-	</header>
-
 </body>
 </html>
