Add clickable icons

--- a/About.html
+++ b/About.html
@@ -2,9 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="About.css">
 	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous|Taviraj&display=swap" rel="stylesheet"> 
 	
 	<title>Professional Portfolio</title>
 </head>
@@ -24,7 +25,7 @@
 	<section>
 		<div class="description">
 			  <p>
-				My name is Peter Muhia Gichia, currently a sudent at Moringa School leraning web develoment, after completing my studies at the Technical university of Kenya where i was pursuing a Bachelors degree in Business Information Technology.
+				My name is Peter Muhia Gichia, currently a sudent at <a href="https://moringaschool.com/">Moringa School</a> leraning web develoment, after completing my studies at the <a href="tukenya.ac.ke">Technical university of Kenya</a> where i was pursuing a Bachelors degree in Business Information Technology.
 				<p>
 				<p>
 					I have worked with the Kenya National bureau of Statistics as an enumerator where i was involved in collecting vast amount of data for analysis.
@@ -34,18 +35,14 @@
 				</p>
 				<p>
 					I decide to study programming and coding in  programming to increase in programming  and i think the world in the next 50years everything will be digitized so not only will there be a need for better programmers  but also the need for people who can make use of technology to future solve problems.
-				</p>
-
-				
-
-				
+				</p>	
 			
 		</div>
 	</section>
 	<div>
 			<nav>
 				<ul>
-					<li><a href="Home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="About.html">About</a></li>
 					<li><a href="Projects.html">Projects</a></li>
 					<li><a href="Contact.html">Contacts</a></li>
