--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
-	
+
 	<title>Professional Portfolio</title>
 </head>
 <body>
 	<header>
 		<div class="container">
 			<div id="profile">
+
 				<img src="cloud.jpg" style="height: 150px;width: 200px">
 				<h1>Peter Gichia</h1>
 
@@ -32,12 +33,21 @@
 	<div>
 			<nav>
 				<ul>
-					<li><a href="Home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="About.html">About</a></li>
 					<li><a href="Projects.html">Projects</a></li>
 					<li><a href="Contact.html">Contacts</a></li>
 				</ul>
 			</nav>
 		</div>
+		<footer>
+			<h1>Lets connect</h1>
+			<a href="https://www.instagram.com/peter_gichia/"><img src="Instagram.jpg" style="height: 100px;width: 150px"></a>
+			<a href="https://www.facebook.com/profile.php?id=100011840195149"><img src="Fb.jpg" style="height: 100px;width: 150px"></a>
+			<a href="https://mail.google.com"><img src="Email.jpg" style="height: 100px;width: 150px"></a>
+			<a href="https://www.instagram.com/peter_gichia/"><img src="LinkedIn.jpg" style="height: 100px;width: 150px"></a>
+			<a href="https://twitter.com/gichia_p"><img src="twitter.jpg" style="height: 100px;width: 150px"></a>
+
+		</footer>
 </body>
 </html>
