Add footer to the icon links

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -41,7 +41,7 @@
 			</nav>
 		</div>
 		<footer>
-			<h1>Lets connect</h1>
+			<h1>Hey, Lets connect</h1>
 			<a href="https://www.instagram.com/peter_gichia/"><img src="Instagram.jpg" style="height: 100px;width: 150px"></a>
 			<a href="https://www.facebook.com/profile.php?id=100011840195149"><img src="Fb.jpg" style="height: 100px;width: 150px"></a>
 			<a href="https://mail.google.com"><img src="Email.jpg" style="height: 100px;width: 150px"></a>
