Add github project urls

--- a/Projects.html
+++ b/Projects.html
@@ -27,7 +27,18 @@
 				This are basically the projects i have while at Moringa and TUK.
 			</p>
 		</div>
+
 	</section>
+	<div class="Links">
+		<h1>This are the links to my Projects.Feel free to check them out..</h1>
+		<p><a href="https://github.com/Peter-cloud-web/Hello-world">Hello world</a></p>
+		<p><a href="https://github.com/Peter-cloud-web/First-Webpage">First webpage</a></p>
+		<p><a href="https://github.com/Peter-cloud-web/Music-band">Music band</a></p>
+		<p><a href="https://github.com/Peter-cloud-web/Twenty-One-pilots">Twenty one pilots</a></p>
+		<p><a href="https://github.com/Peter-cloud-web/cookie-recipe-edit">recipe</a></p>
+
+	</div>
+
 	<div>
 			<nav>
 				<ul>
