--- a/Projects.html
+++ b/Projects.html
@@ -35,7 +35,7 @@
 		<p><a href="https://github.com/Peter-cloud-web/First-Webpage">First webpage</a></p>
 		<p><a href="https://github.com/Peter-cloud-web/Music-band">Music band</a></p>
 		<p><a href="https://github.com/Peter-cloud-web/Twenty-One-pilots">Twenty one pilots</a></p>
-		<p><a href="https://github.com/Peter-cloud-web/cookie-recipe-edit">recipe</a></p>
+		<p><a href="https://github.com/Peter-cloud-web/cookie-recipe-edit">Recipe</a></p>
 
 	</div>
 
