--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="index.css">
-	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
-	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
+	    <meta charset="utf-8">
+	 	<meta name="viewport" content="width=device-width">
+	 	<meta name="description" content="Twenty one pilots">
+	 	<meta name="keywords" content="Twenty one pilots, pop rock,dan josh,chlorine,stressed up">
+	 	<meta name="author" content="Peter Gichia">
+	    <link rel="stylesheet" type="text/css" href="index.css">
+	    <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
+	    <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
 
 	<title>Professional Portfolio</title>
 </head>
@@ -42,11 +47,11 @@
 		</div>
 		<footer>
 			<h1>Hey, Lets connect</h1>
-			<a href="https://www.instagram.com/peter_gichia/"><img src="Instagram.jpg" style="height: 100px;width: 150px"></a>
-			<a href="https://www.facebook.com/profile.php?id=100011840195149"><img src="Fb.jpg" style="height: 100px;width: 150px"></a>
-			<a href="https://mail.google.com"><img src="Email.jpg" style="height: 100px;width: 150px"></a>
-			<a href="https://www.instagram.com/peter_gichia/"><img src="LinkedIn.jpg" style="height: 100px;width: 150px"></a>
-			<a href="https://twitter.com/gichia_p"><img src="twitter.jpg" style="height: 100px;width: 150px"></a>
+			<a href="https://www.instagram.com/peter_gichia/"><img src="Instagram.jpg" style="height: 30px;width: 40px"></a>
+			<a href="https://www.facebook.com/profile.php?id=100011840195149"><img src="Fb.jpg" style="height: 30px;width: 40px"></a>
+			<a href="https://mail.google.com"><img src="Email.jpg" style="height: 30px;width: 40px"></a>
+			<a href="https://www.instagram.com/peter_gichia/"><img src="LinkedIn.jpg" style="height: 30px;width: 40px"></a>
+			<a href="https://twitter.com/gichia_p"><img src="twitter.jpg" style="height: 30px;width: 40px"></a>
 
 		</footer>
 </body>
