Add github links to my projects

--- a/About.html
+++ b/About.html
@@ -2,6 +2,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	 <meta charset="utf-8">
+	 <meta name="viewport" content="width=device-width">
+	 <meta name="description" content="Twenty one pilots">
+	 <meta name="keywords" content="Twenty one pilots, pop rock,dan josh,chlorine,stressed up">
+	 <meta name="author" content="Peter Gichia">
 	<link rel="stylesheet" type="text/css" href="About.css">
 	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
@@ -24,17 +29,25 @@
 
 	<section>
 		<div class="description">
-			  <p>
-				My name is Peter Muhia Gichia, currently a sudent at <a href="https://moringaschool.com/">Moringa School</a> leraning web develoment, after completing my studies at the <a href="tukenya.ac.ke">Technical university of Kenya</a> where i was pursuing a Bachelors degree in Business Information Technology.
-				<p>
-				<p>
-					I have worked with the Kenya National bureau of Statistics as an enumerator where i was involved in collecting vast amount of data for analysis.
+			    <p>
 
-				    I have also worked in my own business which involved errands services around the cbd.The busines name was
+				<em>Education Background :</em><br>My name is Peter Muhia Gichia, currently a student at <a href="https://moringaschool.com/">Moringa School</a> which a tech school specialised in Fullstack web development, Android application development and Data science. Iam currently learning web develoment, after completing my studies at the <a href="tukenya.ac.ke">Technical University of Kenya</a> where i was pursuing a Bachelors degree in Business Information Technology.
+				<p>
+				<p>
+					<em>Job Experience :</em><br>I have worked with the <a href="https://www.knbs.or.ke">Kenya National bureau of Statistics</a> as an enumerator where i was involved in collecting vast amount of data for analysis.
+
+				    I have also worked in my own business which involved running errands services around the cbd.The business name was
 				    <a href="https://geecheered.wixsite.com/errandservices">Geecheer errands</a>
 				</p>
 				<p>
-					I decide to study programming and coding in  programming to increase in programming  and i think the world in the next 50years everything will be digitized so not only will there be a need for better programmers  but also the need for people who can make use of technology to future solve problems.
+					<em>Reasons why i chose programming :</em><br>I decide to study programming and coding in  programming to increase in programming  and i think the world in the next 50years everything will be digitized so not only will there be a need for better programmers  but also the need for people who can make use of technology to future solve problems.
+					
+				</p>
+				<p>
+					<em>My Interests</em><br>My interest lies in a lot of things including playing guitar and drumsets because am very passionate about music Rock to be precise am also very much interested in learning the nitty gritty of the Blockchain technology which i think if more people come to learn of its capability not in the digital currencies but how it can resolve alot of problems especially here in Africa it would be a helpful resource.
+				</p>
+				<p>
+					<em>Hobbies :</em><br>For this i would probably say coding and listening to music.
 				</p>	
 			
 		</div>
