Add border adjustments css styling

--- a/About.html
+++ b/About.html
@@ -7,18 +7,17 @@
 	 <meta name="description" content="Twenty one pilots">
 	 <meta name="keywords" content="Twenty one pilots, pop rock,dan josh,chlorine,stressed up">
 	 <meta name="author" content="Peter Gichia">
-	<link rel="stylesheet" type="text/css" href="About.css">
-	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
-	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
-	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous|Taviraj&display=swap" rel="stylesheet"> 
-	
+	 <link rel="stylesheet" type="text/css" href="About.css">
+	 <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
+	    <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
+	 <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Kaushan+Script|Pacifico|Satisfy&display=swap" rel="stylesheet"> 
 	<title>Professional Portfolio</title>
 </head>
 <body>
 	<header>
 		<div class="container">
 			<div id="profile">
-				<img src="peter.jpg" style="height: 150px;width: 200px">
+			
 				<h1>Peter Gichia</h1>
 
 				<h2>Lets dive into my <span>Career</span> space. Who am i ?</h2>
@@ -29,6 +28,7 @@
 
 	<section>
 		<div class="description">
+			   <img src="peter.jpg" style="height: 150px;width: 200px">
 			    <p>
 
 				<em>Education Background :</em><br>My name is Peter Muhia Gichia, currently a student at <a href="https://moringaschool.com/">Moringa School</a> which a tech school specialised in Fullstack web development, Android application development and Data science. Iam currently learning web develoment, after completing my studies at the <a href="tukenya.ac.ke">Technical University of Kenya</a> where i was pursuing a Bachelors degree in Business Information Technology.
@@ -62,5 +62,19 @@
 				</ul>
 			</nav>
 		</div>
+		
+		<footer>
+			<h1>Hey, Lets connect..</h1>
+			
+				<a href="https://www.instagram.com/peter_gichia/"><img src="Instagram.jpg" style="height: 30px;width: 40px"></a>
+			<a href="https://www.facebook.com/profile.php?id=100011840195149"><img src="Fb.jpg" style="height: 30px;width: 40px"></a>
+			<a href="https://mail.google.com"><img src="Email.jpg" style="height: 30px;width: 40px"></a>
+			<a href="https://www.instagram.com/peter_gichia/"><img src="LinkedIn.jpg" style="height: 30px;width: 40px"></a>
+			<a href="https://twitter.com/gichia_p"><img src="twitter.jpg" style="height: 30px;width: 40px"></a>
+
+			<p> 2019Portfolio. &copypetergichia; <a href="#">Privacy</a> &middot; <a href="#">Terms & conditions</a></p>	
+			
+			
+		</footer>
 </body>
 </html>
