--- a/Projects.html
+++ b/Projects.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="Project.css">
-	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
-	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
-
-	<title>Professional Portfolio</title>
+	 <meta charset="utf-8">
+	 <meta name="viewport" content="width=device-width">
+	 <meta name="description" content="Twenty one pilots">
+	 <meta name="keywords" content="Twenty one pilots, pop rock,dan josh,chlorine,stressed up">
+	 <meta name="author" content="Peter Gichia">
+	 <link rel="stylesheet" type="text/css" href="Project.css">
+	 <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
+     <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
+	 <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Kaushan+Script|Pacifico|Satisfy&display=swap" rel="stylesheet"> 
+	 <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Gupter|Kaushan+Script|Pacifico|Playfair+Display+SC|Satisfy&display=swap" rel="stylesheet"> 
+     <title>Professional Portfolio</title>
 </head>
 <body>
 	<header>
 		<div class="container">
 			<div id="profile">
 
-				<img src="cloud.jpg" style="height: 150px;width: 200px">
 				<h1>Peter Gichia</h1>
 
 				<h2>Welcome to the <span> Digital Projects</span> i have done in this space</h2>
@@ -22,13 +27,32 @@
 	</header>
 
 	<section>
+		<h2>This are the links of my Projects on<a href="https://github.com/Peter-cloud-web">Github</a>.Feel free to check them out..</h2>
+
 	<div class="Links">
-		<h1>This are the links to my Projects.Feel free to check them out..</h1>
-		<p><a href="https://github.com/Peter-cloud-web/Hello-world">Hello World</a></p>
-		<p><a href="https://github.com/Peter-cloud-web/First-Webpage">First Webpage</a></p>
-		<p><a href="https://github.com/Peter-cloud-web/Music-band">Music Band</a></p>
-		<p><a href="https://github.com/Peter-cloud-web/Twenty-One-pilots">Twenty One Pilots</a></p>
-		<p><a href="https://github.com/Peter-cloud-web/cookie-recipe-edit">Recipe</a></p>
+
+		
+
+		<a href="https://github.com/Peter-cloud-web/Hello-world">Hello World Project</a>
+		<p>
+			This is one of my first projects in Moringa school. It is a simple webpage that explores the use of haedings to and how they are displayed on a webpage and how to work with the Linux terminal commands to push your projects from the local repository using git to the remote repository on Github for storage.
+		</p>
+		<a href="https://github.com/Peter-cloud-web/Working-with-Branches">Working with Branches Project</a>
+		<p>
+			This project comprises of ways one can use github resources to create pages that may used while working on a project.Github pages work in such a way it helps a developer organise his work especially where teams are involved where diffrent developers work on diffrent parts of a project on diffrent git pages then merge them to a master branch after the project is perfect with no bugs.
+		</p>
+		<a href="https://github.com/Peter-cloud-web/Music-band"> The Music Band Project</a>
+		<p>
+			This is a project i did at my former university.The project involves the usage of forms and the aadition of footer where one get to place all the footer contents in a wepage. Footer elements hold the contents that re going to be displayed at the lowest section of the website while forms are used with the input roperty to to allow a user to type something in the website could be a name or password.
+		</p>
+
+		<a href="https://github.com/Peter-cloud-web/Twenty-One-pilots">Twenty One Pilots Project</a>
+		<p>This is one of my favourite projects because i got to integrate alot of properties as i tried to build a website for my favourite rock music bands. This is a project i did at the Technical university of Kenya and still was a requirement in Moringa school.
+		Here i got to use cell spacing , cell borders and borders in tables and HTML5 sturucture</p>
+		<a href="https://github.com/Peter-cloud-web/cookie-recipe-edit">Recipe Project</a>
+		<P>
+			This is a project the involves folking of other people projects from their remote Github repository to your remote Github repository and cloning to your local repository which is your local machine's storage. This is a process that is specially done to a project you want contribute it. May be if you want add some HTML, CSS or javascript to make it better or improve it then pushing it to your Github repository where you get to request the owner to pull it to his/her Github account and check out the improvements you've done into it.
+		</P>
 
 	</div>
 	
@@ -47,13 +71,17 @@
 			</nav>
 		</div>
 		<footer>
-			<h1>Lets connect</h1>
-			<a href="https://www.instagram.com/peter_gichia/"><img src="Instagram.jpg" style="height: 100px;width: 150px"></a>
-			<a href="https://www.facebook.com/profile.php?id=100011840195149"><img src="Fb.jpg" style="height: 100px;width: 150px"></a>
-			<a href="https://mail.google.com"><img src="Email.jpg" style="height: 100px;width: 150px"></a>
-			<a href="https://www.instagram.com/peter_gichia/"><img src="LinkedIn.jpg" style="height: 100px;width: 150px"></a>
-			<a href="https://twitter.com/gichia_p"><img src="twitter.jpg" style="height: 100px;width: 150px"></a>
+			<h1>Hey, Lets connect..</h1>
+			
+			<a href="https://www.instagram.com/peter_gichia/"><img src="Instagram.jpg" style="height: 30px;width: 40px"></a>
+			<a href="https://www.facebook.com/profile.php?id=100011840195149"><img src="Fb.jpg" style="height: 30px;width: 40px"></a>
+			<a href="https://mail.google.com"><img src="Email.jpg" style="height: 30px;width: 40px"></a>
+			<a href="https://www.instagram.com/peter_gichia/"><img src="LinkedIn.jpg" style="height: 30px;width: 40px"></a>
+			<a href="https://twitter.com/gichia_p"><img src="twitter.jpg" style="height: 30px;width: 40px"></a>
 
+			<p> 2019Portfolio. &copypetergichia; <a href="#">Privacy</a> &middot; <a href="#">Terms & conditions</a></p>	
+			
+			
 		</footer>
 </body>
 </html>
