--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 	    <link rel="stylesheet" type="text/css" href="index.css">
 	    <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
 	    <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
-
+	 <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Kaushan+Script|Pacifico|Satisfy&display=swap" rel="stylesheet"> 
 	<title>Professional Portfolio</title>
 </head>
 <body>
 	<header>
+		
 		<div class="container">
 			<div id="profile">
 
-				<img src="cloud.jpg" style="height: 150px;width: 200px">
-				<h1>Peter Gichia</h1>
+				<h1>Peter Gichia.</h1>
 
-				<h2>Lets dive into my <span>Digital</span> space</h2>
+				<h2>Portfolio.<br><span>Lets dive into my Digital space</span></h2>
 
 			</div>
+
 		</div>
 	</header>
 
@@ -46,13 +47,17 @@
 			</nav>
 		</div>
 		<footer>
-			<h1>Hey, Lets connect</h1>
-			<a href="https://www.instagram.com/peter_gichia/"><img src="Instagram.jpg" style="height: 30px;width: 40px"></a>
+			<h1>Hey, Lets connect..</h1>
+			
+				<a href="https://www.instagram.com/peter_gichia/"><img src="Instagram.jpg" style="height: 30px;width: 40px"></a>
 			<a href="https://www.facebook.com/profile.php?id=100011840195149"><img src="Fb.jpg" style="height: 30px;width: 40px"></a>
 			<a href="https://mail.google.com"><img src="Email.jpg" style="height: 30px;width: 40px"></a>
 			<a href="https://www.instagram.com/peter_gichia/"><img src="LinkedIn.jpg" style="height: 30px;width: 40px"></a>
 			<a href="https://twitter.com/gichia_p"><img src="twitter.jpg" style="height: 30px;width: 40px"></a>
 
+			<p> 2019Portfolio. &copypetergichia; <a href="#">Privacy</a> &middot; <a href="#">Terms & conditions</a></p>	
+			
+			
 		</footer>
 </body>
 </html>
