Add indentations and spacing

--- a/Projects.html
+++ b/Projects.html
@@ -31,8 +31,6 @@
 
 	<div class="Links">
 
-		
-
 		<a href="https://github.com/Peter-cloud-web/Hello-world">Hello World Project</a>
 		<p>
 			This is one of my first projects in Moringa school. It is a simple webpage that explores the use of haedings to and how they are displayed on a webpage and how to work with the Linux terminal commands to push your projects from the local repository using git to the remote repository on Github for storage.
@@ -53,13 +51,13 @@
 		<P>
 			This is a project the involves folking of other people projects from their remote Github repository to your remote Github repository and cloning to your local repository which is your local machine's storage. This is a process that is specially done to a project you want contribute it. May be if you want add some HTML, CSS or javascript to make it better or improve it then pushing it to your Github repository where you get to request the owner to pull it to his/her Github account and check out the improvements you've done into it.
 		</P>
-
+		<a href="https://github.com/Peter-cloud-web/Media-Queries">Media Queries Project</a>
+		<p>
+			This project is all about the use of media queries property in CSS to display various effects when the page is opened n diffrent screen sizes, it involves the use of Min-width which makes the design to change when the screen gets bigger than the stated size while Max-width changes the screen design whenever the screen smaller then stated size.
+		</p>
 	</div>
-	
 
 	</section>
-	
-
 	<div>
 			<nav>
 				<ul>
