--- a/About.html
+++ b/About.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!DOCTYPE html>
+
 <html>
 <head>
 	 <meta charset="utf-8">
@@ -9,8 +9,9 @@
 	 <meta name="author" content="Peter Gichia">
 	 <link rel="stylesheet" type="text/css" href="About.css">
 	 <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
-	    <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
+	 <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
 	 <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Kaushan+Script|Pacifico|Satisfy&display=swap" rel="stylesheet"> 
+	 <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Gupter|Kaushan+Script|Pacifico|Playfair+Display+SC|Satisfy&display=swap" rel="stylesheet"> 
 	<title>Professional Portfolio</title>
 </head>
 <body>
@@ -62,11 +63,11 @@
 				</ul>
 			</nav>
 		</div>
-		
+
 		<footer>
 			<h1>Hey, Lets connect..</h1>
 			
-				<a href="https://www.instagram.com/peter_gichia/"><img src="Instagram.jpg" style="height: 30px;width: 40px"></a>
+			<a href="https://www.instagram.com/peter_gichia/"><img src="Instagram.jpg" style="height: 30px;width: 40px"></a>
 			<a href="https://www.facebook.com/profile.php?id=100011840195149"><img src="Fb.jpg" style="height: 30px;width: 40px"></a>
 			<a href="https://mail.google.com"><img src="Email.jpg" style="height: 30px;width: 40px"></a>
 			<a href="https://www.instagram.com/peter_gichia/"><img src="LinkedIn.jpg" style="height: 30px;width: 40px"></a>
