--- a/Contact.html
+++ b/Contact.html
@@ -20,7 +20,7 @@
 			
 				<h1>Peter Gichia</h1>
 
-				<h2>You can always reach me.</h2>
+				<h2>The good news is, you can always reach me.</h2>
 
 			</div>
 		</div>
