--- a/Projects.html
+++ b/Projects.html
@@ -3,8 +3,8 @@
 <head>
 	 <meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width">
-	 <meta name="description" content="Twenty one pilots">
-	 <meta name="keywords" content="Twenty one pilots, pop rock,dan josh,chlorine,stressed up">
+	 <meta name="description" content="Peter Gichia's portfolio">
+	 <meta name="keywords" content="Github,Portfolio,Peter Gichia,Web development,webdesign,Moringa">
 	 <meta name="author" content="Peter Gichia">
 	 <link rel="stylesheet" type="text/css" href="Project.css">
 	 <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
