--- a/About.html
+++ b/About.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML>
-
 <html>
 <head>
 	 <meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width">
-	 <meta name="description" content="Twenty one pilots">
-	 <meta name="keywords" content="Twenty one pilots, pop rock,dan josh,chlorine,stressed up">
+	 <meta name="description" content="Peter Gichia's portfolio">
+	 <meta name="keywords" content="Github,Portfolio,Peter Gichia,Web development,webdesign,Moringa">
 	 <meta name="author" content="Peter Gichia">
 	 <link rel="stylesheet" type="text/css" href="About.css">
 	 <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
@@ -32,20 +31,20 @@
 			   <img src="peter.jpg" style="height: 150px;width: 200px">
 			    <p>
 
-				<em>Education Background :</em><br>My name is Peter Muhia Gichia, currently a student at <a href="https://moringaschool.com/">Moringa School</a> which a tech school specialised in Fullstack web development, Android application development and Data science. Iam currently learning web develoment, after completing my studies at the <a href="tukenya.ac.ke">Technical University of Kenya</a> where i was pursuing a Bachelors degree in Business Information Technology.
+				<em>Education Background :</em><br>My name is Peter Muhia Gichia, currently a student at <a href="https://moringaschool.com/">Moringa School</a> which is a tech school specialised in Fullstack web development, Android application development and Data science. Iam currently learning web develoment, after completing my studies at the <a href="tukenya.ac.ke">Technical University of Kenya</a> where i was pursuing a Bachelors degree in Business Information Technology.
 				<p>
 				<p>
-					<em>Job Experience :</em><br>I have worked with the <a href="https://www.knbs.or.ke">Kenya National bureau of Statistics</a> as an enumerator where i was involved in collecting vast amount of data for analysis.
+					<em>Job Experience :</em><br>I have worked with the <a href="https://www.knbs.or.ke">Kenya National bureau of Statistics</a> as an enumerator where i was involved in collecting vast amount of data for Census analysis.
 
 				    I have also worked in my own business which involved running errands services around the cbd.The business name was
 				    <a href="https://geecheered.wixsite.com/errandservices">Geecheer errands</a>
 				</p>
 				<p>
-					<em>Reasons why i chose programming :</em><br>I decide to study programming and coding in  programming to increase in programming  and i think the world in the next 50years everything will be digitized so not only will there be a need for better programmers  but also the need for people who can make use of technology to future solve problems.
+					<em>Reasons why i chose programming :</em><br>I decide to study programming and coding  to increase my knowledge in programming  and i also think the world in the next 50 years everything will be digitized so not only will there be a need for better programmers  but also the need for people who can make use of technology to solve problems.
 					
 				</p>
 				<p>
-					<em>My Interests</em><br>My interest lies in a lot of things including playing guitar and drumsets because am very passionate about music Rock to be precise am also very much interested in learning the nitty gritty of the Blockchain technology which i think if more people come to learn of its capability not in the digital currencies but how it can resolve alot of problems especially here in Africa it would be a helpful resource.
+					<em>My Interests</em><br>My interest lies in a lot of things including playing guitar and drumsets because am very passionate and a music enthusiast, Rock to be precise, am also very much interested in learning the nitty gritty of the Blockchain technology which i think if more people came to learn of its capability not only in the digital currencies but how it can resolve alot of problems especially here in Africa.Problems of land ownership due to manipulation of data at land registry offices would be a story of the past.
 				</p>
 				<p>
 					<em>Hobbies :</em><br>For this i would probably say coding and listening to music.
