--- a/Contact.html
+++ b/Contact.html
@@ -3,12 +3,12 @@
 <head>
 	 <meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width">
-	 <meta name="description" content="Twenty one pilots">
-	 <meta name="keywords" content="Twenty one pilots, pop rock,dan josh,chlorine,stressed up">
+	 <meta name="description" content="Peter Gichia's portfolio">
+	 <meta name="keywords" content="Github,Portfolio,Peter Gichia,Web development,webdesign,Moringa">
 	 <meta name="author" content="Peter Gichia">
 	 <link rel="stylesheet" type="text/css" href="Contact.css">
 	 <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
-	    <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
+	 <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
 	 <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Kaushan+Script|Pacifico|Satisfy&display=swap" rel="stylesheet"> 
 	 <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Gupter|Kaushan+Script|Pacifico|Playfair+Display+SC|Satisfy&display=swap" rel="stylesheet"> 
 	<title>Professional Portfolio</title>
