--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <html>
 <head>
 	    <meta charset="utf-8">
-	 	<meta name="viewport" content="width=device-width">
-	 	<meta name="description" content="Twenty one pilots">
-	 	<meta name="keywords" content="Twenty one pilots, pop rock,dan josh,chlorine,stressed up">
-	 	<meta name="author" content="Peter Gichia">
+	    <meta name="viewport" content="width=device-width">
+	    <meta name="description" content="Peter Gichia's portfolio">
+	    <meta name="keywords" content="Github,Portfolio,Peter Gichia,Web development,webdesign,Moringa">
+	    <meta name="author" content="Peter Gichia">
 	    <link rel="stylesheet" type="text/css" href="index.css">
 	    <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
 	    <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Righteous&display=swap" rel="stylesheet"> 
 	    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Kaushan+Script|Pacifico|Satisfy&display=swap" rel="stylesheet"> 
+	    <link href="https://fonts.googleapis.com/css?family=Ibarra+Real+Nova&display=swap" rel="stylesheet"> 
 	    <title>Professional Portfolio</title>
 </head>
 <body>
@@ -31,7 +32,7 @@
 	<section>
 		<div class="description">
 			<p>
-				This site gives a detailed information about Peter Gichia's vast experience in web development offering entailed links to some of his past projects he has participated in.
+				This site gives a detailed information about Peter Gichia's  experience in web development offering entailed links to some of his past projects he has participated in, his background. job experience and schooling in general.
 				Feel free to navigate through the pages and dive into my awesome career.
 			</p>
 		</div>
@@ -49,7 +50,7 @@
 		<footer>
 			<h1>Hey, Lets connect..</h1>
 			
-				<a href="https://www.instagram.com/peter_gichia/"><img src="Instagram.jpg" style="height: 30px;width: 40px"></a>
+			<a href="https://www.instagram.com/peter_gichia/"><img src="Instagram.jpg" style="height: 30px;width: 40px"></a>
 			<a href="https://www.facebook.com/profile.php?id=100011840195149"><img src="Fb.jpg" style="height: 30px;width: 40px"></a>
 			<a href="https://mail.google.com"><img src="Email.jpg" style="height: 30px;width: 40px"></a>
 			<a href="https://www.instagram.com/peter_gichia/"><img src="LinkedIn.jpg" style="height: 30px;width: 40px"></a>
